[gd_scene load_steps=8 format=3 uid="uid://b6qs13w832yj8"]

[ext_resource type="Script" uid="uid://c3mignmhuvvq4" path="res://addons/maaacks_menus_template/base/scenes/menus/options_menu/paginated_tab_container.gd" id="1_kmvv6"]
[ext_resource type="Script" uid="uid://cq3i1eonaxo4e" path="res://scripts/menuChar1.gd" id="2_pfu3g"]
[ext_resource type="Texture2D" uid="uid://b1cjpmuj8y31a" path="res://assets/sprites/GUI/menu/Mugshots/Mort/MortMug.png" id="3_ooxj4"]
[ext_resource type="Texture2D" uid="uid://c52fxssvhvxxk" path="res://assets/sprites/GUI/menu/Mugshots/Mort/MortMug_Low.png" id="4_sgx18"]
[ext_resource type="FontFile" uid="uid://bmmf8u0ug6ocw" path="res://assets/fonts/TrajanPro-Regular.ttf" id="5_ss8hp"]
[ext_resource type="Texture2D" uid="uid://rbkygj0hyi7e" path="res://assets/sprites/GUI/bloodBar.png" id="6_23yp1"]

[sub_resource type="Theme" id="Theme_pfu3g"]

[node name="Menu2" type="TabContainer"]
process_mode = 3
anchors_preset = -1
anchor_right = 0.786
anchor_bottom = 0.9
offset_right = -0.0800171
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_pfu3g")
tab_alignment = 1
current_tab = 1
script = ExtResource("1_kmvv6")

[node name="CharacterList" type="NinePatchRect" parent="."]
process_mode = 1
visible = false
z_index = 999
layout_mode = 2
metadata/_tab_index = 0

[node name="Player" type="Control" parent="CharacterList"]
anchors_preset = 0
offset_top = 54.594
offset_right = 40.0
offset_bottom = 94.594
script = ExtResource("2_pfu3g")

[node name="Mugshot" type="TextureRect" parent="CharacterList/Player"]
layout_mode = 0
offset_top = 319.0
offset_right = 250.0
offset_bottom = 569.0
texture = ExtResource("3_ooxj4")

[node name="LowMugshot" type="TextureRect" parent="CharacterList/Player"]
layout_mode = 0
offset_top = 319.297
offset_right = 250.0
offset_bottom = 569.297
texture = ExtResource("4_sgx18")

[node name="Name" type="Label" parent="CharacterList/Player"]
layout_mode = 0
offset_top = 189.241
offset_right = 250.0
offset_bottom = 237.241
theme_override_fonts/font = ExtResource("5_ss8hp")
theme_override_font_sizes/font_size = 24
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Humanity" type="Label" parent="CharacterList/Player"]
layout_mode = 0
offset_left = 8.0
offset_top = 286.0
offset_right = 243.0
offset_bottom = 316.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BloodBar" type="TextureProgressBar" parent="CharacterList/Player"]
layout_mode = 0
offset_left = 8.0
offset_top = 240.0
offset_right = 243.0
offset_bottom = 249.0
texture_progress = ExtResource("6_23yp1")
tint_under = Color(0.670588, 0.670588, 0.670588, 0.670588)
tint_progress = Color(0.52, 0, 0, 1)

[node name="GutBar" type="TextureProgressBar" parent="CharacterList/Player"]
layout_mode = 0
offset_left = 8.03671
offset_top = 270.775
offset_right = 243.037
offset_bottom = 310.775
texture_progress = ExtResource("6_23yp1")

[node name="Fullness" type="Label" parent="CharacterList/Player"]
layout_mode = 0
offset_left = 8.03671
offset_top = 253.663
offset_right = 250.037
offset_bottom = 289.663
theme_override_fonts/font = ExtResource("5_ss8hp")
theme_override_font_sizes/font_size = 16
text = "Gut"
vertical_alignment = 1

[node name="HP" type="Label" parent="CharacterList/Player"]
layout_mode = 0
offset_left = 8.03671
offset_top = 222.459
offset_right = 250.037
offset_bottom = 261.459
theme_override_fonts/font = ExtResource("5_ss8hp")
theme_override_font_sizes/font_size = 16
text = "Blood"
vertical_alignment = 1

[node name="bloodVal" type="Label" parent="CharacterList/Player"]
layout_mode = 0
offset_left = 66.0
offset_top = 230.0
offset_right = 244.0
offset_bottom = 246.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="gutVal" type="Label" parent="CharacterList/Player"]
layout_mode = 0
offset_left = 46.0
offset_top = 262.0
offset_right = 242.0
offset_bottom = 278.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="PMember1" type="Control" parent="CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mugshot" type="TextureRect" parent="CharacterList/PMember1"]
layout_mode = 0
offset_left = 250.143
offset_top = 373.686
offset_right = 500.143
offset_bottom = 623.686
texture = ExtResource("3_ooxj4")

[node name="LowMugshot" type="TextureRect" parent="CharacterList/PMember1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="CharacterList/PMember1"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="HP" type="Label" parent="CharacterList/PMember1"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Fullness" type="Label" parent="CharacterList/PMember1"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Humanity" type="Label" parent="CharacterList/PMember1"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="PMember2" type="Control" parent="CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mugshot" type="TextureRect" parent="CharacterList/PMember2"]
layout_mode = 0
offset_left = 500.285
offset_top = 373.686
offset_right = 750.285
offset_bottom = 623.686
texture = ExtResource("3_ooxj4")

[node name="LowMugshot" type="TextureRect" parent="CharacterList/PMember2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="CharacterList/PMember2"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="HP" type="Label" parent="CharacterList/PMember2"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Fullness" type="Label" parent="CharacterList/PMember2"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Humanity" type="Label" parent="CharacterList/PMember2"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="PMember3" type="Control" parent="CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mugshot" type="TextureRect" parent="CharacterList/PMember3"]
layout_mode = 0
offset_left = 750.428
offset_top = 373.686
offset_right = 1000.43
offset_bottom = 623.686
texture = ExtResource("3_ooxj4")

[node name="LowMugshot" type="TextureRect" parent="CharacterList/PMember3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="CharacterList/PMember3"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="HP" type="Label" parent="CharacterList/PMember3"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Fullness" type="Label" parent="CharacterList/PMember3"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Humanity" type="Label" parent="CharacterList/PMember3"]
layout_mode = 0
offset_left = 510.0
offset_top = 270.0
offset_right = 550.0
offset_bottom = 293.0

[node name="Buttons" type="Control" parent="CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Location" type="Control" parent="CharacterList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="location" type="Label" parent="CharacterList/Location"]
process_mode = 3
layout_mode = 0
offset_left = 1.00459
offset_top = 150.221
offset_right = 1000.0
offset_bottom = 240.221
theme_override_font_sizes/font_size = 32
text = "LOCATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="something" type="Label" parent="CharacterList/Location"]
layout_mode = 0
offset_top = 40.5016
offset_right = 1000.0
offset_bottom = 150.502
theme_override_font_sizes/font_size = 40
text = "SOMETHING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CharacterList"]
layout_mode = 0
offset_right = 1000.0
offset_bottom = 374.0

[node name="Inventory" type="TabContainer" parent="."]
layout_mode = 2
tab_alignment = 1
current_tab = 0
metadata/_tab_index = 1

[node name="Items" type="MarginContainer" parent="Inventory"]
layout_mode = 2
metadata/_tab_index = 0

[node name="SplitContainer" type="HBoxContainer" parent="Inventory/Items"]
layout_mode = 2
alignment = 1

[node name="ListContainer" type="VBoxContainer" parent="Inventory/Items/SplitContainer"]
layout_mode = 2

[node name="ListaOggetti" type="Label" parent="Inventory/Items/SplitContainer/ListContainer"]
layout_mode = 2
text = "Lista Oggetti"

[node name="InformationContainer" type="CenterContainer" parent="Inventory/Items/SplitContainer"]
layout_mode = 2

[node name="InformazioniOggetto" type="Label" parent="Inventory/Items/SplitContainer/InformationContainer"]
layout_mode = 2
text = "Informazioni Oggetto Selezionato"

[node name="Food" type="MarginContainer" parent="Inventory"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="SplitContainer" type="HBoxContainer" parent="Inventory/Food"]
layout_mode = 2
alignment = 1

[node name="ListContainer" type="VBoxContainer" parent="Inventory/Food/SplitContainer"]
layout_mode = 2

[node name="ListaOggetti" type="Label" parent="Inventory/Food/SplitContainer/ListContainer"]
layout_mode = 2
text = "Lista Oggetti"

[node name="InformationContainer" type="CenterContainer" parent="Inventory/Food/SplitContainer"]
layout_mode = 2

[node name="InformazioniOggetto" type="Label" parent="Inventory/Food/SplitContainer/InformationContainer"]
layout_mode = 2
text = "Informazioni Oggetto Selezionato"

[node name="Texts" type="MarginContainer" parent="Inventory"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="SplitContainer" type="HBoxContainer" parent="Inventory/Texts"]
layout_mode = 2
alignment = 1

[node name="ListContainer" type="VBoxContainer" parent="Inventory/Texts/SplitContainer"]
layout_mode = 2

[node name="ListaOggetti" type="Label" parent="Inventory/Texts/SplitContainer/ListContainer"]
layout_mode = 2
text = "Lista Oggetti"

[node name="InformationContainer" type="CenterContainer" parent="Inventory/Texts/SplitContainer"]
layout_mode = 2

[node name="InformazioniOggetto" type="Label" parent="Inventory/Texts/SplitContainer/InformationContainer"]
layout_mode = 2
text = "Informazioni Oggetto Selezionato"

[node name="Armor" type="MarginContainer" parent="Inventory"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="SplitContainer" type="HBoxContainer" parent="Inventory/Armor"]
layout_mode = 2
alignment = 1

[node name="ListContainer" type="VBoxContainer" parent="Inventory/Armor/SplitContainer"]
layout_mode = 2

[node name="ListaOggetti" type="Label" parent="Inventory/Armor/SplitContainer/ListContainer"]
layout_mode = 2
text = "Lista Oggetti"

[node name="InformationContainer" type="CenterContainer" parent="Inventory/Armor/SplitContainer"]
layout_mode = 2

[node name="InformazioniOggetto" type="Label" parent="Inventory/Armor/SplitContainer/InformationContainer"]
layout_mode = 2
text = "Informazioni Oggetto Selezionato"

[node name="Weapons" type="MarginContainer" parent="Inventory"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="SplitContainer" type="HBoxContainer" parent="Inventory/Weapons"]
layout_mode = 2
alignment = 1

[node name="ListContainer" type="VBoxContainer" parent="Inventory/Weapons/SplitContainer"]
layout_mode = 2

[node name="ListaOggetti" type="Label" parent="Inventory/Weapons/SplitContainer/ListContainer"]
layout_mode = 2
text = "Lista Oggetti"

[node name="InformationContainer" type="CenterContainer" parent="Inventory/Weapons/SplitContainer"]
layout_mode = 2

[node name="InformazioniOggetto" type="Label" parent="Inventory/Weapons/SplitContainer/InformationContainer"]
layout_mode = 2
text = "Informazioni Oggetto Selezionato"

[node name="Skill" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Equipment" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 3
